@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2005 the original author or authors.
+ * Copyright 2002-2006 the original author or authors.
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
 
 package org.springframework.beans.factory;
 
+import java.lang.reflect.Field;
 import java.text.NumberFormat;
 import java.util.Arrays;
 import java.util.List;
@@ -35,6 +36,7 @@ import org.springframework.beans.TestBean;
 import org.springframework.beans.factory.config.AutowireCapableBeanFactory;
 import org.springframework.beans.factory.config.BeanPostProcessor;
 import org.springframework.beans.factory.config.ConstructorArgumentValues;
+import org.springframework.beans.factory.config.InstantiationAwareBeanPostProcessor;
 import org.springframework.beans.factory.config.RuntimeBeanReference;
 import org.springframework.beans.factory.support.*;
 import org.springframework.beans.factory.xml.ConstructorDependenciesBean;
@@ -985,6 +987,57 @@ public class DefaultListableBeanFactoryTests extends TestCase {
 
 		public Object createGeneric() {
 			return create();
+		}
+	}
+	
+	public void testFieldSettingWithInstantiationAwarePostProcessorNoShortCircuit() {
+		testFieldSettingWithInstantiationAwarePostProcessor(false);
+	}
+	
+	public void testFieldSettingWithInstantiationAwarePostProcessorWithShortCircuit() {
+		testFieldSettingWithInstantiationAwarePostProcessor(true);
+	}
+	
+	private void testFieldSettingWithInstantiationAwarePostProcessor(final boolean skipPropertyPopulation) {
+		DefaultListableBeanFactory lbf = new DefaultListableBeanFactory();
+		RootBeanDefinition bd = new RootBeanDefinition(TestBean.class, null);
+		int ageSetByPropertyValue = 27;
+		bd.getPropertyValues().addPropertyValue(new PropertyValue("age", new Integer(ageSetByPropertyValue)));
+		lbf.registerBeanDefinition("test", bd);
+		final String nameSetOnField = "nameSetOnField";
+		lbf.addBeanPostProcessor(new InstantiationAwareBeanPostProcessor() {
+			public Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
+				return bean;
+			}
+			public Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
+				return bean;
+			}
+			public Object postProcessBeforeInstantiation(Class beanClass, String beanName) throws BeansException {
+				return null;
+			}
+			public boolean postProcessAfterInstantiation(Object bean, String beanName) throws BeansException {
+				TestBean tb = (TestBean) bean;
+				try {
+					Field f = TestBean.class.getDeclaredField("name");
+					f.setAccessible(true);
+					f.set(tb, nameSetOnField);
+					return !skipPropertyPopulation;
+				}
+				catch (Exception ex) {
+					fail("Unexpected exception: " + ex);
+					// Keep compiler happy about return
+					throw new IllegalStateException();
+				}
+			}
+		});
+		lbf.preInstantiateSingletons();
+		TestBean tb = (TestBean) lbf.getBean("test");
+		assertEquals("Name was set on field by IAPP", nameSetOnField, tb.getName());
+		if (!skipPropertyPopulation) {
+			assertEquals("Property value still set", ageSetByPropertyValue, tb.getAge());
+		}
+		else {
+			assertEquals("Property value was NOT set and still has default value", 0, tb.getAge());
 		}
 	}
 
